# CodeSensei

./: .gitignore  OPENCODE_INTEGRATION.md  OPENCODE_TEST_GUIDE.md  README.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.js  详细设计文档.txt
docs/: REQUIREMENT.md
src/: App.vue
src-tauri/: Cargo.toml  run-output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  claude_node.rs  config.rs  main.rs  opencode.rs
src/api/: tauri.js
src/components/: MonacoEditor.vue  RequirementDialog.vue  SettingsDialog.vue
src/router/: index.js
src/views/: Graph.vue  Home.vue  Project.vue  TaskExecution.vue
